# cpp-ray-tracer

./: CMakeLists.txt  README.md  main.cpp
ray-tracer/: Camera.cpp  Camera.h  Figure.h  Light.h  Material.h  Scene.h  Shape.h  Texture.h  Tracer.cpp  Tracer.h
ray-tracer/core/: Color.cpp  Color.h  Hit.h  Ray.cpp  Ray.h  Vector.cpp  Vector.h
ray-tracer/light/: Directed.cpp  Directed.h  Pointed.cpp  Pointed.h
ray-tracer/shape/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
